# jbDE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  TODO.md  TODO.txt  palettes.py  tableCArules.json  timingSingleBuffered.txt
hexfiles/: 31.hex  aragon16.hex  japanese-woodblock.hex  matplotlib_cyc_hsv.hex  matplotlib_cyc_twilight.hex  matplotlib_cyc_twilight_shifted.hex  matplotlib_diverging_BrBG.hex  matplotlib_diverging_PRGn.hex  matplotlib_diverging_PiYG.hex  matplotlib_diverging_PuOr.hex  matplotlib_diverging_RdBu.hex  matplotlib_diverging_RdGy.hex  matplotlib_diverging_RdYlBu.hex  matplotlib_diverging_RdYlGn.hex  matplotlib_diverging_Spectral.hex  matplotlib_diverging_bwr.hex  matplotlib_diverging_coolwarm.hex  matplotlib_diverging_seismic.hex  matplotlib_misc_CMRmap.hex  matplotlib_misc_brg.hex  matplotlib_misc_cubehelix.hex  matplotlib_misc_flag.hex  matplotlib_misc_gist_earth.hex  matplotlib_misc_gist_ncar.hex  matplotlib_misc_gist_rainbow.hex  matplotlib_misc_gist_stern.hex  matplotlib_misc_gnuplot.hex  matplotlib_misc_gnuplot2.hex  matplotlib_misc_jet.hex  matplotlib_misc_nipy_spectral.hex  matplotlib_misc_ocean.hex  matplotlib_misc_prism.hex  matplotlib_misc_rainbow.hex  matplotlib_misc_terrain.hex  matplotlib_misc_turbo.hex  matplotlib_qualitative_Accent.hex  matplotlib_qualitative_Dark2.hex  matplotlib_qualitative_Paired.hex  matplotlib_qualitative_Pastel1.hex  matplotlib_qualitative_Pastel2.hex  (+46 more)
scripts/: build.sh  cloneSubmoduleAdd.sh
src/ImGUI/TextEditor/: TextEditor.cc  TextEditor.h
src/SoftRast/: SoftRast.h
src/data/: bayer.h  colors.h  glyphLoader.h  paletteLoader.h  wordlistLoader.h
src/engine/: config.json  dataStructs.h  engine.cc  engine.h  engineImguiUtils.cc  engineInit.cc  engineUtils.cc  includes.h  main.cc
src/engine/coreUtils/: bindset.h  glTimer.h  image.h  image2.h  inputHandler.h  math.h  random.h  terminal.h  terminalState.h  texture.h  timer.h  window.h
src/engine/mains/: main_base2.cc
src/engine/shaders/: blit.fs.glsl  blit.vs.glsl  tonemap.cs.glsl
src/engine/shaders/lib/: biasGain.h  colorRamps.glsl.h  colorRamps.h  colorspaceConversions.glsl  colorspaceConversions.h  complexNumbers.glsl.h  consistentPrimitives.glsl.h  cubeVerts.h  ditherNoiseFuncs.h  glyphs.h  hg_sdf.glsl  hsvConversions.glsl  intersect.h  mathUtils.h  noise.h  oklabConversions.h.glsl  oldTestChamber.h.glsl  pbrConstants.glsl  random.h  rayState.h.glsl  rayState2.h.glsl  remapFuncs.temp.h  shaderWrapper.h  sky.h  spaceFillingCurves.h.glsl  tonemap.glsl  wood.h  yuvConversions.h
src/erosion/: particleBased.h
src/fonts/fontRenderer/: renderer.h
src/projects/AirplaneMode2/: main.cc
src/projects/Aquaria/: main.cc
src/projects/Aquaria/BVH/: main.cc
src/projects/Aquaria/SpherePack/: main.cc
src/projects/Aquaria/shaders/: dummyDraw.cs.glsl  lighting.cs.glsl  precompute.cs.glsl
src/projects/CellularAutomata/: main.cc
src/projects/CellularAutomata/1D/: main.cc
src/projects/CellularAutomata/CAHistory/: main.cc
src/projects/CellularAutomata/CAHistory3D/: main.cc
src/projects/CellularAutomata/GoL/: main.cc
src/projects/CellularAutomata/bitPlanes/: main.cc
src/projects/CellularAutomata/colorSplit/: main.cc
src/projects/CellularAutomata/history/: main.cc
src/projects/CellularAutomata/shaders/: draw.cs.glsl  dummyDraw.cs.glsl  update.cs.glsl
src/projects/CellularAutomata/table/: main.cc
src/projects/EngineDemo/: main.cc
src/projects/EngineDemo/shaders/: dummyDraw.cs.glsl
src/projects/FontGame/: main.cc
src/projects/IFS/: main.cc  operations.h
src/projects/IFS/2D/: main.cc
src/projects/IFS/shaders/: clear.cs.glsl  draw.cs.glsl  update.cs.glsl
src/projects/Impostors/Chorizo/: capsuleIntersector+backface.txt  chorizo.h  generate.h  main.cc  model.cc  model.h
src/projects/Impostors/ChorizoForest/: chorizo.h  main.cc
src/projects/Impostors/ChorizoSoftbody/: chorizo.h  model.cc  model.h
src/projects/Impostors/Ellipsoid/: main.cc
src/projects/Impostors/ProjectedFramebuffers/: main.cc  projectedFramebuffers.h
src/projects/Impostors/Vertexture/: main.cc  vertexture.h
src/projects/Impostors/VertextureClassic/: main.cc  vertexture.h  vertextureModels.h
src/projects/LineSpam/: LineSpam.h  main.cc
src/projects/LineSpam/shaders/: clear.cs.glsl  composite.cs.glsl  draw.cs.glsl  opaqueDraw.cs.glsl  opaquePreZ.cs.glsl  transparentDraw.cs.glsl
src/projects/PathTracing/BVHtest/: bvh.h  main.cc
src/projects/PathTracing/Caustic/: main.cc
src/projects/PathTracing/CellarDoor/: main.cc
src/projects/PathTracing/Daedalus/: daedalus.h  daedalusConfig.h  daedalusData.cc  daedalusImGui.cc  daedalusImgui.cc  main.cc  tileDispenser.h
src/projects/PathTracing/Icarus/: icarus.h  icarusData.h  icarusImGUI.h  icarusMain.h  icarusView.h  main.cc
src/projects/PathTracing/Siren/: dummyAnimation.json  ffmpegNotes.txt  main.cc
src/projects/Physarum/: main.cc  presets.json
src/projects/Physarum/2.5D/: main.cc
src/projects/Physarum/2D/: main.cc
src/projects/Physarum/3D/: main.cc  presets.json
src/projects/Physarum/Embossed/: main.cc
src/projects/Physarum/shaders/: agent.cs.glsl  agent.fs.glsl  agent.vs.glsl  bufferCopy.cs.glsl  (+2 more)
src/projects/ProjectedFramebuffers/: main.cc  projectedFramebuffers.h  vertexture.h
src/projects/Siren/: main.cc
src/projects/SlowScan/: main.cc
src/projects/SoftBodies/: main.cc  model.cc  model.h
src/projects/SpaceGame/: main.cc  sim.h
src/projects/Vertexture/: main.cc  vertexture.h  vertextureModels.h
src/projects/VertextureClassic/: main.cc  vertexture.h  vertextureModels.h
src/projects/Voraldo14/: main.cc
src/projects/VoxelSpace/: main.cc
src/projects/engineDemo/: main.cc
src/projects/fontGame/: main.cc
src/projects/main_base2/: main.cc
src/utils/: CPU_info.h  thousands.h  tinyBVH_impl.cc
src/utils/SoftRast/: SoftRast.h
src/utils/autocomplete/: DictionaryTrie.cpp  DictionaryTrie.hpp
src/utils/debug/: debug.h
src/utils/erosion/: particleBased.h
src/utils/fftw-3.3.10/: CMakeLists.txt
src/utils/trident/: trident.h  tridentCopy.cs.glsl  tridentGenerate.cs.glsl
(+186 files in other folders)
